--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -131,7 +131,7 @@
             opacity: 1;
             box-shadow: 0 0 10px 2px var(--blades-white-bright);
             // scale: 1.15 1;
-            margin: 0 8px;
+            // margin: 0 8px;
             * {
               color: var(--blades-white-bright);
             }
