--- a/src/scss/chat/_chat.scss
+++ b/src/scss/chat/_chat.scss
@@ -92,7 +92,7 @@
         vertical-align: -12px; // Adjust this value to align the letter with the following text
         // letter-spacing: 0.1px;
         margin-right: -1px;
-        font-family: Kirsty;
+        font-family: Kirsty, serif;
         // font-weight: bold;
         // scale: 1 1.5;
       }
